@@ -1,3 +1,11 @@
+2009-03-16  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+	Fixes: NB#103836 (or at least its test case).
+	
+	* matchbox/core/mb-wm-client.c: When a window is unmapped,
+	don't also unmap its transients.  Instead, make them
+	intransient and issue a warning.
+
 2009-03-13  Thomas Thurman  <thomas.thurman@collabora.co.uk>
 
 	Add new _HILDON_WM_NAME property which can be used to name
